# koprs

./: Cargo.toml  README.md  cargo-ci.sh  deny.toml  todo.md
.github/workflows/: ci.yml
crates/: crates.md
crates/koprs/: Cargo.toml  README.md
crates/koprs-admission/: Cargo.toml  README.md
crates/koprs-admission/src/: error.rs  lib.rs  review.rs  webhook.rs
crates/koprs-admission/src/tests/: error.rs  mod.rs  review.rs  webhook.rs
crates/koprs-admission/tests/: integration.rs
crates/koprs-derive/: Cargo.toml  README.md
crates/koprs-derive/src/: lib.rs
crates/koprs-derive/src/tests/: ko_resource.rs  mod.rs
crates/koprs-external/: Cargo.toml  README.md
crates/koprs-external/src/: error.rs  http.rs  lib.rs  store.rs  watcher.rs
crates/koprs-external/src/tests/: error.rs  http.rs  mod.rs  store.rs  watcher.rs
crates/koprs-external/tests/: integration.rs
crates/koprs-gen/: Cargo.toml
crates/koprs/scripts/: publish.sh
crates/koprs/src/: controller.rs  events.rs  finalizers.rs  gc.rs  lib.rs  meta.rs  observability.rs  owners.rs  resources.rs  scope.rs  status.rs  traits.rs  watcher.rs
crates/koprs/src/tests/: controller.rs  error.rs  events.rs  finalizers.rs  gc.rs  meta.rs  mod.rs  observability.rs  owners.rs  resources.rs  status.rs  traits.rs  watcher.rs
crates/koprs/tests/: integration.rs
examples/: README.md
examples/configmapsync/: Cargo.toml  README.md  manifests.yaml
examples/configmapsync/manifests/: crd.yaml  example-cr.yaml
examples/configmapsync/src/: main.rs  reconciler.rs  types.rs
examples/multicontroller/: Cargo.toml  README.md
examples/multicontroller/manifests/: crd-secretsync.yaml  crd-serviceaccountsync.yaml  example-cr.yaml
examples/multicontroller/src/: main.rs  secretsync.rs  serviceaccountsync.rs  types.rs
memory/: MEMORY.md  feedback_watcher_design.md
scripts/: cargo-ci.sh  publish.sh
src/: error.rs  finalizers.rs  gc.rs  lib.rs  resources.rs  scope.rs  status.rs  traits.rs  watcher.rs
src/tests/: error.rs  finalizers.rs  gc.rs  mod.rs  resources.rs  scope.rs  status.rs  traits.rs  watcher.rs
tests/: integration.rs
