[workspace]
members = ["crates/*", "examples/configmapsync", "examples/multicontroller"]
resolver = "2"

[workspace.package]
version = "0.9.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/bartvanbenthem/koprs"
description = "SDK for building Kubernetes applications in Rust. Provides high level APIs, useful abstractions, and project scaffolding."

[workspace.dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive"] }
kube-runtime = "1.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
inventory = "0.3"