[workspace]
members = ["crates/*", "examples/configmapsync", "examples/multicontroller"]
resolver = "2"

[workspace.package]
version = "0.10.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/bartvanbenthem/koprs"
description = "A collection of reusable Rust libraries for Kubernetes operator development, enabling operators built with significantly less code."

[workspace.dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive"] }
kube-runtime = "1.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"