[package]
name = "koprs-admission"
version = "0.1.0"
edition = "2024"
description = "Validating admission webhook server for Kubernetes operators, designed as a companion to koprs."
license = "MIT"
repository = "https://github.com/bartvanbenthem/koprs"
readme = "README.md"
keywords = ["kubernetes", "admission", "webhook", "operator", "validation"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "koprs_admission"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal"] }
tracing = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
http-body-util = "0.1"
tower = { version = "0.5", default-features = false, features = ["util"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
integration = []

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["integration"]
