[package]
name = "configmapsync-operator"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "operator"
path = "src/main.rs"

[dependencies]
koprs = { path = "../../crates/koprs" }
kube = { workspace = true }
kube-runtime = { workspace = true }
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
schemars.workspace = true
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
chrono = "0.4"
futures-util = "0.3"
